tests/neg-custom-args/captures/lazyref.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/lazyref.scala:19:28 --------------------------------------
19 |  val ref1c: LazyRef[Int] = ref1 // error
   |                            ^^^^
   |                            Found:    LazyRef[Int]{val elem: () ->{cap1} Int}^{ref1}
   |                            Required: LazyRef[Int]
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/lazyref.scala:21:35 --------------------------------------
21 |  val ref2c: LazyRef[Int]^{cap2} = ref2 // error
   |                                   ^^^^
   |                                   Found:    LazyRef[Int]{val elem: () ->{cap[test]} Int}^{ref2}
   |                                   Required: LazyRef[Int]^{cap2}
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/lazyref.scala:23:35 --------------------------------------
23 |  val ref3c: LazyRef[Int]^{ref1} = ref3 // error
   |                                   ^^^^
   |                                   Found:    LazyRef[Int]{val elem: () ->{cap[test]} Int}^{ref3}
   |                                   Required: LazyRef[Int]^{ref1}
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/lazyref.scala:25:35 --------------------------------------
25 |  val ref4c: LazyRef[Int]^{cap1} = ref4 // error
   |                                   ^^^^
   |                                   Found:    LazyRef[Int]{val elem: () ->{cap[test]} Int}^{ref4}
   |                                   Required: LazyRef[Int]^{cap1}
   |
   | longer explanation available when compiling with `-explain`
